modify index.html - add more html elements

--- a/index.html
+++ b/index.html
@@ -2,18 +2,51 @@
 <!document HTML>
 <html lang="en-US">
 
+<head>
+<meta charset="utf-8">
+<link rel = "stylesheet" href = "stylesheet.css">
+<title> Personal Website </title>
+</head>
+
 <body>
+	<div>
 
+<!-- TO DO : Decide if you want to have div here 
+<div class="box">
+  <img src="photo_avani.jpg" alt="" class="box-img">
 
-<h1> Hello World! </h1>
+</div>
+--> 
+
+<!--<h1> Hello World! </h1>
 <p> Checkout my website! </p>
+-->
+	
+		<div>
+			<img src="photo_avani.jpg" alt="My photo" width = "200">
+
+			<h1> Avani Tanna <h1>
+		</div>
+		
+		<div>
+			<p>
+				Computer Science student. Dual Degree in Electrical Engineering from IIT Bombay. Curious mind. 
+				Thanks for visiting my website.
+			</p>
+		
+			<!--unordered lists used here! -->
+			<ul>
+				<li>
+				  <a title="link to the repository containing the source code" href = "https://github.com/avanitanna/avanitanna.github.io"> github repository </a>
+				</li>
+				<li>
+				  <a title = "link to my linkedin profile" href="https://www.linkedin.com/in/avani-tanna/">LinkedIn</a>
+				</li>
+			</ul>
+		</div>
 
 
-
-
-
-
-
+	</div>
 </body>
 
 
