update img src attribute

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 -->
 	
 		<div>
-			<img src="/images/photo_avani.jpg" alt="My photo" width = "200">
+			<img src="images/photo_avani.jpg" alt="My photo" width = "200">
 
 			<h1> Avani Tanna <h1>
 		</div>
