--- a/index.html
+++ b/index.html
@@ -1,56 +1,86 @@
-<!--Creating my own website! -->
+<!--Creating my own website for the first time is fun! -->
 <!document HTML>
 <html lang="en-US">
 
-<head>
-<meta charset="utf-8">
-<link rel = "stylesheet" href = "stylesheet.css">
-<title> Personal Website </title>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<!--external css file here! -->
+		<link rel = "stylesheet" type="text/css" href = "stylesheet.css">
+		<!-- title included here! -->
+		<title> CS291A Project0 </title>
+	</head>
 
-<body>
-	<div>
-
-<!-- TO DO : Decide if you want to have div here 
-<div class="box">
-  <img src="photo_avani.jpg" alt="" class="box-img">
-
-</div>
---> 
-
-<!--<h1> Hello World! </h1>
-<p> Checkout my website! </p>
--->
-	
-		<div>
-			<img src="images/photo_avani.jpg" alt="My photo" width = "200">
-
-			<h1> Avani Tanna <h1>
-		</div>
+	<body>
+		<!--header used here! -->
+		<header>
+		<!--heading used here! -->
+		<h1> Project0 <h1> 
+		<p> Cool project! </p> 
+		</header>
 		
-		<div>
-			<p>
-				Computer Science student. Dual Degree in Electrical Engineering from IIT Bombay. Curious mind. 
-				Thanks for visiting my website.
-			</p>
+		<p>
+		Hey! I am Avani Tanna. I am a graduate student in Computer Science at UCSB. This is a static web page for CS291A taught in Fall 2021 at UCSB.
+		Thanks for visiting my website! 
+		</p>
+		<p>
+		You can find me on <a href="https://www.linkedin.com/in/avani-tanna/">LinkedIn</a> if you would like to connect with me. 
+		</p>
+		<!-- image hosted on the same domain here! -->
+		<img src="images/photo_avani.jpg" alt="My photo" id = "my_photo" width = "200">
+			
+
+		<!--unordered lists used here with at least 3 items! -->
+		<h2>
+		Days these days: 
+		</h2>
+		<ul>
+			<li>
+			  Early morning exercise 
+			</li>
+			<li>
+			  Classes and learning
+			</li>
+			<li>
+			  TA duties
+			</li>
+			<li>
+			  Beach :) 
+			</li>
+			<li>
+			  Wondering why the days are so short!  
+			</li>
+		</ul>
 		
-			<!--unordered lists used here! -->
-			<ul>
-				<li>
-				  <a title="link to the repository containing the source code" href = "https://github.com/avanitanna/avanitanna.github.io"> github repository </a>
-				</li>
-				<li>
-				  <a title = "link to my linkedin profile" href="https://www.linkedin.com/in/avani-tanna/">LinkedIn</a>
-				</li>
-			</ul>
-		</div>
-
-
-	</div>
-</body>
-
-
-
-
+		<!--table used here with at least 2 columns and 3 rows!-->
+		<h2>
+		This course:
+		</h2>
+		<table>
+			<tr>
+				<th>Why is this course cool?</th>
+				<th>What are we going to learn?</th>
+			</tr>
+			<tr>
+				<td>Internet services are everywhere and solve so many of our problems</td>
+				<td>High demand and increased complexity makes it interesting to learn about practices to scale internet services</td>
+				<td>We all care about and expect service availability with a reasonable response time despite the growing traffic and data set size</td>
+				<td>It is industry applicable</td>
+				<td>Because its cool and Bryce Boe teaches it!</td>
+			</tr>
+			<tr>
+				<td>HTTP Server Architectures</td>
+				<td>Load Balancing</td>
+				<td>Content Delivery Networks</td>
+				<td>Some software engineering techniques</td>
+				<td>and more...</td>
+			</tr>
+	    </table>
+		
+		<!-- a hyperlink to the GitHub repository containing the source code included here! -->
+		<h3>
+		Source code for this repository
+		</h3>
+		<a href="https://github.com/avanitanna/avanitanna.github.io">github repository</a>
+	</body>
 
 </html>
