--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				<th>What are we going to learn?</th>
 			</tr>
 			<tr>
-				<td>Internet services are everywhere </td> <!--and solve so many of our problems</td>!-->
-				<td>High demand and increased complexity makes it interesting </td> <!--to learn about practices to scale internet services</td>!-->
-				<td>We all care about service availability with a reasonable response time </td> <!--despite the growing traffic and data set size</td>!-->
+				<td>Internet services are everywhere and solve so many of our problems</td>
+				<td>High demand and increased complexity makes it interesting to learn about practices to scale internet services</td>
+				<td>We all care about service availability with a reasonable response time despite the growing traffic and data set size</td>
 				<td>It is industry applicable</td>
 				<td>Because its cool and Bryce Boe teaches it!</td>
 			</tr>
