--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
 		
 		<!-- a hyperlink to the GitHub repository containing the source code included here! -->
 		<h3>
-		Source code for this repository
+			<a href="https://github.com/avanitanna/avanitanna.github.io">Source code</a> for this repository
 		</h3>
-		<a href="https://github.com/avanitanna/avanitanna.github.io">github repository</a>
 	</body>
 
 </html>
