--- a/index.html
+++ b/index.html
@@ -62,16 +62,22 @@
 			</tr>
 			<tr>
 				<td>Internet services are everywhere and solve so many of our problems</td>
-				<td>High demand and increased complexity makes it interesting to learn about practices to scale internet services</td>
-				<td>We all care about service availability with a reasonable response time despite the growing traffic and data set size</td>
-				<td>It is industry applicable</td>
-				<td>Because its cool and Bryce Boe teaches it!</td>
+				<td>HTTP Server Architectures</td>	
 			</tr>
 			<tr>
-				<td>HTTP Server Architectures</td>
+				<td>High demand and increased complexity makes it interesting to learn about practices to scale internet services</td>
 				<td>Load Balancing</td>
+			</tr>
+			<tr>
+				<td>We all care about service availability with a reasonable response time despite the growing traffic and data set size</td>
 				<td>Content Delivery Networks</td>
+			</tr>
+			<tr>
+				<td>It is industry applicable</td>
 				<td>Some software engineering techniques</td>
+			</tr>
+			<tr>
+				<td>Because its fun and Bryce Boe teaches it!</td>
 				<td>and more...</td>
 			</tr>
 	    </table>
