--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<td>HTTP Server Architectures</td>	
 			</tr>
 			<tr>
-				<td>High demand and increased complexity makes it interesting to learn about practices to scale internet services</td>
+				<td>High demand and increased complexity make it interesting to learn about practices to scale internet services</td>
 				<td>Load Balancing</td>
 			</tr>
 			<tr>
