--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!--Creating my own website for the first time is fun! -->
-<!document HTML>
+<!DOCTYPE HTML>
 <html lang="en-US">
 
 	<head>
@@ -11,12 +10,10 @@
 	</head>
 
 	<body>
-		<!--header used here! -->
-		<header>
+		
 		<!--heading used here! -->
-		<h1> Project0 <h1> 
+		<h1> Project0 </h1> 
 		<p> Cool project! </p> 
-		</header>
 		
 		<p>
 		Hey! I am Avani Tanna. I am a graduate student in Computer Science at UCSB. This is a static web page for CS291A taught in Fall 2021 at UCSB.
